fable/test/syntax_error/save_slash_slash.f
      program prog
      common num
      save //
      end
